Fixed alignment issue for Windows users

--- a/css/popup.css
+++ b/css/popup.css
@@ -236,7 +236,7 @@ input[type="checkbox"]:focus {
 }
 
 .checkbox-group label {
-  margin-right: 15px;
+  margin-right: 14px;
 }
 
 .box-wrap {
